src/_static.mojo


# @always_inline
# fn glyph_extents(cr: UnsafePointer[__CairoT, MutExternalOrigin], glyphs: UnsafePointer[__CairoGlyphT, ImmutExternalOrigin], num_glyphs: c_int, extents: UnsafePointer[__CairoTextExtentsT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_glyph_extents", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[__CairoGlyphT, ImmutExternalOrigin], c_int, UnsafePointer[__CairoTextExtentsT, MutExternalOrigin]](cr, glyphs, num_glyphs, extents)

# @always_inline
# fn font_extents(cr: UnsafePointer[__CairoT, MutExternalOrigin], extents: UnsafePointer[__CairoFontExtentsT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_font_extents", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[__CairoFontExtentsT, MutExternalOrigin]](cr, extents)

# @always_inline
# fn font_face_reference(font_face: UnsafePointer[__CairoFontFaceT, MutExternalOrigin]) -> UnsafePointer[__CairoFontFaceT, MutExternalOrigin]:
#     return external_call["cairo_font_face_reference", UnsafePointer[__CairoFontFaceT, MutExternalOrigin], UnsafePointer[__CairoFontFaceT, MutExternalOrigin]](font_face)

# @always_inline
# fn font_face_destroy(font_face: UnsafePointer[__CairoFontFaceT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_font_face_destroy", NoneType, UnsafePointer[__CairoFontFaceT, MutExternalOrigin]](font_face)

# @always_inline
# fn font_face_get_reference_count(font_face: UnsafePointer[__CairoFontFaceT, MutExternalOrigin]) -> c_uint:
#     return external_call["cairo_font_face_get_reference_count", c_uint, UnsafePointer[__CairoFontFaceT, MutExternalOrigin]](font_face)

# @always_inline
# fn font_face_status(font_face: UnsafePointer[__CairoFontFaceT, MutExternalOrigin]) -> cairo_status_t:
#     return CairoStatusT(external_call["cairo_font_face_status", c_int, UnsafePointer[__CairoFontFaceT, MutExternalOrigin]](font_face))

# @always_inline
# fn font_face_get_type(font_face: UnsafePointer[__CairoFontFaceT, MutExternalOrigin]) -> c_int:
#     return external_call["cairo_font_face_get_type", c_int, UnsafePointer[__CairoFontFaceT, MutExternalOrigin]](font_face)

# @always_inline
# fn scaled_font_create(font_face: UnsafePointer[__CairoFontFaceT, MutExternalOrigin], font_matrix: UnsafePointer[__CairoMatrixT, ImmutExternalOrigin], ctm: UnsafePointer[__CairoMatrixT, ImmutExternalOrigin], options: UnsafePointer[__CairoFontOptionsT, ImmutExternalOrigin]) -> UnsafePointer[__CairoScaledFontT, MutExternalOrigin]:
#     return external_call["cairo_scaled_font_create", UnsafePointer[__CairoScaledFontT, MutExternalOrigin], UnsafePointer[__CairoFontFaceT, MutExternalOrigin], UnsafePointer[__CairoMatrixT, ImmutExternalOrigin], UnsafePointer[__CairoMatrixT, ImmutExternalOrigin], UnsafePointer[__CairoFontOptionsT, ImmutExternalOrigin]](font_face, font_matrix, ctm, options)

# @always_inline
# fn scaled_font_reference(scaled_font: UnsafePointer[__CairoScaledFontT, MutExternalOrigin]) -> UnsafePointer[__CairoScaledFontT, MutExternalOrigin]:
#     return external_call["cairo_scaled_font_reference", UnsafePointer[__CairoScaledFontT, MutExternalOrigin], UnsafePointer[__CairoScaledFontT, MutExternalOrigin]](scaled_font)

# @always_inline
# fn scaled_font_destroy(scaled_font: UnsafePointer[__CairoScaledFontT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_scaled_font_destroy", NoneType, UnsafePointer[__CairoScaledFontT, MutExternalOrigin]](scaled_font)

# @always_inline
# fn scaled_font_get_reference_count(scaled_font: UnsafePointer[__CairoScaledFontT, MutExternalOrigin]) -> c_uint:
#     return external_call["cairo_scaled_font_get_reference_count", c_uint, UnsafePointer[__CairoScaledFontT, MutExternalOrigin]](scaled_font)

# @always_inline
# fn scaled_font_status(scaled_font: UnsafePointer[__CairoScaledFontT, MutExternalOrigin]) -> cairo_status_t:
#     return CairoStatusT(external_call["cairo_scaled_font_status", c_int, UnsafePointer[__CairoScaledFontT, MutExternalOrigin]](scaled_font))

# @always_inline
# fn scaled_font_get_type(scaled_font: UnsafePointer[__CairoScaledFontT, MutExternalOrigin]) -> c_int:
#     return external_call["cairo_scaled_font_get_type", c_int, UnsafePointer[__CairoScaledFontT, MutExternalOrigin]](scaled_font)

# @always_inline
# fn scaled_font_extents(scaled_font: UnsafePointer[__CairoScaledFontT, MutExternalOrigin], extents: UnsafePointer[__CairoFontExtentsT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_scaled_font_extents", NoneType, UnsafePointer[__CairoScaledFontT, MutExternalOrigin], UnsafePointer[__CairoFontExtentsT, MutExternalOrigin]](scaled_font, extents)

# @always_inline
# fn scaled_font_text_extents(scaled_font: UnsafePointer[__CairoScaledFontT, MutExternalOrigin], utf8: UnsafePointer[c_char, ImmutExternalOrigin], extents: UnsafePointer[__CairoTextExtentsT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_scaled_font_text_extents", NoneType, UnsafePointer[__CairoScaledFontT, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[__CairoTextExtentsT, MutExternalOrigin]](scaled_font, utf8, extents)

# @always_inline
# fn scaled_font_glyph_extents(scaled_font: UnsafePointer[__CairoScaledFontT, MutExternalOrigin], glyphs: UnsafePointer[__CairoGlyphT, ImmutExternalOrigin], num_glyphs: c_int, extents: UnsafePointer[__CairoTextExtentsT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_scaled_font_glyph_extents", NoneType, UnsafePointer[__CairoScaledFontT, MutExternalOrigin], UnsafePointer[__CairoGlyphT, ImmutExternalOrigin], c_int, UnsafePointer[__CairoTextExtentsT, MutExternalOrigin]](scaled_font, glyphs, num_glyphs, extents)

# @always_inline
# fn scaled_font_text_to_glyphs(scaled_font: UnsafePointer[__CairoScaledFontT, MutExternalOrigin], x: c_double, y: c_double, utf8: UnsafePointer[c_char, ImmutExternalOrigin], utf8_len: c_int, glyphs: UnsafePointer[UnsafePointer[__CairoGlyphT, MutExternalOrigin], MutExternalOrigin], num_glyphs: UnsafePointer[c_int, MutExternalOrigin], clusters: UnsafePointer[UnsafePointer[__CairoTextClusterT, MutExternalOrigin], MutExternalOrigin], num_clusters: UnsafePointer[c_int, MutExternalOrigin], cluster_flags: UnsafePointer[c_int, MutExternalOrigin]) -> cairo_status_t:
#     return CairoStatusT(external_call["cairo_scaled_font_text_to_glyphs", c_int, UnsafePointer[__CairoScaledFontT, MutExternalOrigin], c_double, c_double, UnsafePointer[c_char, ImmutExternalOrigin], c_int, UnsafePointer[UnsafePointer[__CairoGlyphT, MutExternalOrigin], MutExternalOrigin], UnsafePointer[c_int, MutExternalOrigin], UnsafePointer[UnsafePointer[__CairoTextClusterT, MutExternalOrigin], MutExternalOrigin], UnsafePointer[c_int, MutExternalOrigin], UnsafePointer[c_int, MutExternalOrigin]](scaled_font, x, y, utf8, utf8_len, glyphs, num_glyphs, clusters, num_clusters, cluster_flags))

# @always_inline
# fn scaled_font_get_font_face(scaled_font: UnsafePointer[__CairoScaledFontT, MutExternalOrigin]) -> UnsafePointer[__CairoFontFaceT, MutExternalOrigin]:
#     return external_call["cairo_scaled_font_get_font_face", UnsafePointer[__CairoFontFaceT, MutExternalOrigin], UnsafePointer[__CairoScaledFontT, MutExternalOrigin]](scaled_font)

# @always_inline
# fn scaled_font_get_font_matrix(scaled_font: UnsafePointer[__CairoScaledFontT, MutExternalOrigin], font_matrix: UnsafePointer[__CairoMatrixT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_scaled_font_get_font_matrix", NoneType, UnsafePointer[__CairoScaledFontT, MutExternalOrigin], UnsafePointer[__CairoMatrixT, MutExternalOrigin]](scaled_font, font_matrix)

# @always_inline
# fn scaled_font_get_ctm(scaled_font: UnsafePointer[__CairoScaledFontT, MutExternalOrigin], ctm: UnsafePointer[__CairoMatrixT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_scaled_font_get_ctm", NoneType, UnsafePointer[__CairoScaledFontT, MutExternalOrigin], UnsafePointer[__CairoMatrixT, MutExternalOrigin]](scaled_font, ctm)

# @always_inline
# fn scaled_font_get_scale_matrix(scaled_font: UnsafePointer[__CairoScaledFontT, MutExternalOrigin], scale_matrix: UnsafePointer[__CairoMatrixT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_scaled_font_get_scale_matrix", NoneType, UnsafePointer[__CairoScaledFontT, MutExternalOrigin], UnsafePointer[__CairoMatrixT, MutExternalOrigin]](scaled_font, scale_matrix)

# @always_inline
# fn scaled_font_get_font_options(scaled_font: UnsafePointer[__CairoScaledFontT, MutExternalOrigin], options: UnsafePointer[__CairoFontOptionsT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_scaled_font_get_font_options", NoneType, UnsafePointer[__CairoScaledFontT, MutExternalOrigin], UnsafePointer[__CairoFontOptionsT, MutExternalOrigin]](scaled_font, options)

# @always_inline
# fn toy_font_face_create(family: UnsafePointer[c_char, ImmutExternalOrigin], slant: cairo_font_slant_t, weight: cairo_font_weight_t) -> UnsafePointer[__CairoFontFaceT, MutExternalOrigin]:
#     return external_call["cairo_toy_font_face_create", UnsafePointer[__CairoFontFaceT, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], c_int, c_int](family, slant.value, weight.value)

# @always_inline
# fn toy_font_face_get_family(font_face: UnsafePointer[__CairoFontFaceT, MutExternalOrigin]) -> UnsafePointer[c_char, ImmutExternalOrigin]:
#     return external_call["cairo_toy_font_face_get_family", UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[__CairoFontFaceT, MutExternalOrigin]](font_face)

# @always_inline
# fn toy_font_face_get_slant(font_face: UnsafePointer[__CairoFontFaceT, MutExternalOrigin]) -> cairo_font_slant_t:
#     return CairoFontSlantT(external_call["cairo_toy_font_face_get_slant", c_int, UnsafePointer[__CairoFontFaceT, MutExternalOrigin]](font_face))

# @always_inline
# fn toy_font_face_get_weight(font_face: UnsafePointer[__CairoFontFaceT, MutExternalOrigin]) -> cairo_font_weight_t:
#     return CairoFontWeightT(external_call["cairo_toy_font_face_get_weight", c_int, UnsafePointer[__CairoFontFaceT, MutExternalOrigin]](font_face))

# @always_inline
# fn user_font_face_create() -> UnsafePointer[__CairoFontFaceT, MutExternalOrigin]:
#     return external_call["cairo_user_font_face_create", UnsafePointer[__CairoFontFaceT, MutExternalOrigin]]()

# @always_inline
# fn user_scaled_font_get_foreground_marker(scaled_font: UnsafePointer[__CairoScaledFontT, MutExternalOrigin]) -> UnsafePointer[__CairoPatternT, MutExternalOrigin]:
#     return external_call["cairo_user_scaled_font_get_foreground_marker", UnsafePointer[__CairoPatternT, MutExternalOrigin], UnsafePointer[__CairoScaledFontT, MutExternalOrigin]](scaled_font)

# @always_inline
# fn user_scaled_font_get_foreground_source(scaled_font: UnsafePointer[__CairoScaledFontT, MutExternalOrigin]) -> UnsafePointer[__CairoPatternT, MutExternalOrigin]:
#     return external_call["cairo_user_scaled_font_get_foreground_source", UnsafePointer[__CairoPatternT, MutExternalOrigin], UnsafePointer[__CairoScaledFontT, MutExternalOrigin]](scaled_font)

# @always_inline
# fn get_operator(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> c_int:
#     return external_call["cairo_get_operator", c_int, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn get_source(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> UnsafePointer[__CairoPatternT, MutExternalOrigin]:
#     return external_call["cairo_get_source", UnsafePointer[__CairoPatternT, MutExternalOrigin], UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn get_tolerance(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> c_double:
#     return external_call["cairo_get_tolerance", c_double, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn get_antialias(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> c_int:
#     return external_call["cairo_get_antialias", c_int, UnsafePointer[__CairoT, MutExternalOrigin]](cr)
